--- a/docs/prepros-6.config
+++ b/docs/prepros-6.config
@@ -23,15 +23,21 @@
       "imports": [
         "css/_misc/normalize.scss",
         "css/_misc/fonts.scss",
+        "css/_misc/media.scss",
         "css/_misc/layout.scss",
         "css/blocks/common/btn.scss",
         "css/blocks/common/fixed-menu.scss",
         "css/blocks/common/section-title.scss",
         "css/blocks/hero.scss",
         "css/blocks/best.scss",
+        "css/blocks/footer.scss",
         "css/blocks/header.scss",
+        "css/blocks/map.scss",
+        "css/blocks/menu.scss",
         "css/blocks/order.scss",
-        "css/blocks/reviews.scss"
+        "css/blocks/reviews.scss",
+        "css/blocks/team.scss",
+        "css/blocks/hamburger-menu-link.scss"
       ]
     },
     {
